--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.0.7",
+    "next": "^12.0.10",
     "react": "17.0.2",
+    "react-beautiful-dnd": "^13.1.0",
     "react-dom": "17.0.2",
     "swr": "^1.2.1"
   },
